test/inference/bad/coreml_value_restriction.mle
let ['a] (id : 'a -> 'a) = ['a] fun (x : 'a) -> x[]
let ['b] (e : 'b -> 'b) = ['b] id['b -> 'b] id['b]